--- a/WebCrudLogin1/appsettings.json
+++ b/WebCrudLogin1/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ERICK;Database=CampusRideDb;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=campusride.db"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
